[package]
name = "luau-parser-derive"
description = "Derive macros for the luau-parse crate."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["luau", "derive", "parser"]

documentation = "https://docs.rs/luau-parser-derive"
repository = "https://github.com/msix29/luau-parser-derive"
homepage = "https://github.com/msix29/luau-parser-derive"

[dependencies]
syn = "2.0.100"
quote = "1.0.40"
proc-macro2 = "1.0.94"

[lib]
proc-macro = true
