[package]
name = "luau-parser-derive"
description = "Derive macros for the luau-parse crate."
version = "0.2.22"
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["luau", "derive", "parser"]

documentation = "https://docs.rs/luau-parser-derive"
repository = "https://github.com/msix29/luau-parser-derive"
homepage = "https://github.com/msix29/luau-parser-derive"

[dependencies]
syn = "2.0.100"
quote = "1.0.40"
proc-macro2 = "1.0.94"

[lib]
proc-macro = true
